[FIX] website: remove extra space between header and breadcrumb
Step to reproduce:
1. Open the contactus page and add a breadcrumb.
3. Enter edit mode -> Theme.
4. Set the Page Layout to Postcard.

Issue:
In the Postcard layout, a `margin-bottom` is appliead to all direct
children of `#wrapwrap`. When a breadcrumb is present, both the header
and the breadcrumb receive spacing, creating unintended empty space
between them.

Fix:
When breadcrumb exist remove the bottom margin from the header and apply
the spacing to the breadcrumb instead.

task-5884633

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -315,6 +315,16 @@ body {
                 > * {
                     margin-bottom: $spacer * 2;
                 }
+                // When breadcrumb exists, remove margin from header and apply
+                // it to breadcrumb instead
+                &:has(div.o_page_breadcrumb) {
+                    > header {
+                        margin-bottom: 0;
+                    }
+                    div.o_page_breadcrumb {
+                        margin-bottom: $spacer * 2;
+                    }
+                }
                 > header {
                     &, &.o_header_affix {
                         .navbar {
